# my-cli

./: .gitignore  pyproject.toml
klickbrick/: hello.py  klickbrick.py
my-cli/: pyproject.toml
scripting-practice/: n2w.py  opts.py
test-scripts/: editing-input-files.py  hello.py  n2w.py
tests/: TestHello.py
