[tool.poetry]
name = "klickbrick"
version = "0.1.0"
description = ""
authors = ["Mark Venuto <markvenutobass@gmail.com>"]
readme = "README.md"
packages = [{include = "klickbrick"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
klickbrick = "klickbrick.klickbrick:main"
