[tool.poetry]
name = "my-cli"
version = "0.1.0"
description = ""
authors = ["Mark Venuto <markvenutobass@gmail.com>"]
readme = "README.md"
packages = [{include = "my_cli"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
